k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todolist-app
  labels:
    name: todolist-app
    app: todolist
