k8s/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-backend
  namespace: todolist-app
  labels:
    app: todolist-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todolist-backend
  template:
    metadata:
      labels:
        app: todolist-backend
    spec:
      containers:
      - name: todolist-backend
        image: geetasree0103/todolist-app:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/v1/todo/getall
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/v1/todo/getall
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 15
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: todolist-backend-service
  namespace: todolist-app
  labels:
    app: todolist-backend
spec:
  selector:
    app: todolist-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
