k8s/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-frontend
  namespace: todolist-app
  labels:
    app: todolist-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todolist-frontend
  template:
    metadata:
      labels:
        app: todolist-frontend
    spec:
      containers:
      - name: todolist-frontend
        image: geetasree0103/todolist-frontend:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: todolist-frontend-service
  namespace: todolist-app
  labels:
    app: todolist-frontend
spec:
  selector:
    app: todolist-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
